# awesome-mcp-english

./: .gitignore  README.md  check_chinese.sh  fix_permissions.command  git_push.sh  index.html  init.sh  init_repo.sh  package.json  pnpm-lock.yaml  push_updates.sh  setup.sh  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  quality-checks.yml
docs/: USER_GUIDE.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: mod.rs
src/components/: Layout.tsx  MCPInstaller.tsx  MCPStatus.tsx  Sidebar.tsx  index.ts
src/components/ui/: Button.tsx  ProgressBar.tsx
src/core/: index.ts  modelContextProtocol.ts  modelIntegration.ts
src/hooks/: useMCPState.ts
src/lib/: mcp.ts
src/pages/: Dashboard.tsx  Settings.tsx
src/routes/: Dashboard.tsx  Settings.tsx  index.tsx
src/services/: index.ts  installation.ts  mcpService.ts
src/utils/: index.ts  logger.ts  systemCheck.ts
